--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 .holder{
 	display:grid;
 	grid-template-columns:repeat(2,100px);
+	grid-template-rows:repeat(2,100px);
 }
 .item-1{
 	background:red;
